--- a/AzureApp/appsettings.json
+++ b/AzureApp/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ApplicationInsights": {
+    "ConnectionString": "InstrumentationKey=f4caba3f-28c0-44e2-82c7-794c15d2c54c;IngestionEndpoint=https://eastus2-3.in.applicationinsights.azure.com/;LiveEndpoint=https://eastus2.livediagnostics.monitor.azure.com/;ApplicationId=4c982f19-b82a-4e2f-a116-cfdde8593938"
+  },
+  "Greetings": "Greetings from configuration"
 }
