--- a/.github/workflows/staging_az-webapp-github-actions(staging).yml
+++ b/.github/workflows/staging_az-webapp-github-actions(staging).yml
@@ -60,6 +60,6 @@ jobs:
         uses: azure/webapps-deploy@v3
         with:
           app-name: 'az-webapp-github-actions'
-          slot-name: 'staging'
+          slot-name: 'Production'
           package: .
           
